# charm

./: .envrc  .envrc.sample  .gitignore  .splintrc  CMakeLists.txt  Gemfile  Guardfile  LICENSE  Makefile  README.md  TODO  charm.c  charm.h  ddr.c  hellocharm.c  key.c  key.h  package.json  rl.c  sample.envrc
lib/: charm.c  charm.h  ddr.c  hellocharm.c  rl.c
