cmake_minimum_required(VERSION 3.4)

project(charm)
set(EXECUTABLE_OUTPUT_PATH "bin")
set(CMAKE_C_FLAGS "-O2 -Wall -Wextra -Wmost -Weverything")
add_executable(hellocharm lib/hellocharm.c lib/charm.c)
target_link_libraries(hellocharm -lgc)
add_executable(ddr lib/ddr.c lib/charm.c)
target_link_libraries(ddr -lgc)
add_executable(rl lib/rl.c lib/charm.c)
target_link_libraries(rl -lgc)

add_custom_target(cppcheck COMMAND cppcheck -q --enable=all --suppressions-list=$ENV{HOME}/suppressions.cfg lib)
add_custom_target(splint COMMAND find lib -type f -name '*.[ch]' -exec splint {} "\;")
add_custom_target(vera++ COMMAND find lib -type f -name '*.cpp' -o -name '*.[ch]' -exec vera++ -s {} "\;")
add_custom_target(lint DEPENDS cppcheck splint vera++)
